@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-13T08:23:23Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-07-13T16:31:52Z",
+  "count" : 8,
+  "count_minmax" : [ 1, 8 ],
+  "count_decinc" : [ -0, +8 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 1, 5 ],
+  "uniques_decinc" : [ -0, +5 ]
 }
