@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-13T08:23:23Z",
+  "timestamp" : "2022-07-13T16:31:52Z",
   "count_outdated" : 2225,
   "uniques_outdated" : 475,
-  "count" : 2282,
-  "uniques" : 506,
+  "count" : 2289,
+  "uniques" : 510,
   "clones" : [
     {
       "timestamp": "2022-06-29T00:00:00Z",
@@ -105,10 +105,10 @@
     },
     {
       "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 8,
+      "count_minmax": [ 1, 8 ],
+      "uniques": 5,
+      "uniques_minmax": [ 1, 5 ]
     }
   ]
 }
