@@ -1,6 +1,6 @@
 {
-  "count": 57,
-  "uniques": 15,
+  "count": 64,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2022-06-29T00:00:00Z",
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 8,
+      "uniques": 5
     }
   ]
 }
